--- a/letter.html
+++ b/letter.html
@@ -16,10 +16,10 @@
                     <div class="text">
                         <strong>Dear Lya.</strong>
                         <p>
-                            Happy birthday! I hope you have an amazing year and a future ahead.
+                            Happy birthday! I hope you have an amazing year ahead.
                             I am super proud of you and thank you for always being with me.
                             I'm glad to be a part of your life and I am excited for your amazing future.
-                            Always know that your Turbo is your biggest fan and be ..... the Superlya you are XD
+                            Always know that your I am your biggest fan and be the Superlya ..........you are XD
                         </p>
                     </div>
                 </div>
