--- a/letter.html
+++ b/letter.html
@@ -17,9 +17,8 @@
                         <strong>Dear Lya.</strong>
                         <p>
                             Happy birthday! I hope you have an amazing year ahead.
-                            I am super proud of you and thank you for always being with me.
-                            I'm glad to be a part of your life and I am excited for your amazing future.
-                            Always know that your..... Turbo is your biggest fan and be the Superlya .....................you are XD
+                            I am super proud of what you've achieved and am glad to be a short part of your life.
+                            I am excited for your amazing future and always know that your Turbo is your biggest fan XD
                         </p>
                     </div>
                 </div>
