--- a/letter.html
+++ b/letter.html
@@ -17,7 +17,7 @@
                         <strong>Dear Lya.</strong>
                         <p>
                             Happy birthday! I hope you have an amazing year ahead.
-                            I am super proud of what you've achieved and am glad to be a short part of your life.
+                            I am super proud of what you've achieved.
                             I am excited for your amazing future and always know that your Turbo is your biggest fan XD
                         </p>
                     </div>
