--- a/index.html
+++ b/index.html
@@ -1,51 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Happy Birthday Acelya</title>
-    <meta charset="UTF-8" />
-
-    <link rel="stylesheet" href="style.css"
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-</head>
-<body>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-    <div class="balloon"></div>
-
-    <div class="image-container">
-        <img src="bdaycard_2022.jpg"
-    </div>
-    
-    <div class="wrap">
-        <button type="button" class="button" id="loadFile2"">Açelya, click me!</button>
-
-      </div>
-      <script>
-        // JavaScript code to handle the button click event
-        document.getElementById("loadFile2").addEventListener("click", function () {
-            // Redirect to file2.html
-            window.location.href = "letter.html";
-        });
-    </script>
-      <div class="cake">
-        <div class="plate"></div>
-        <div class="layer layer-bottom"></div>
-        <div class="layer layer-middle"></div>
-        <div class="layer layer-top"></div>
-        <div class="icing"></div>
-        <div class="drip drip1"></div>
-        <div class="drip drip2"></div>
-        <div class="drip drip3"></div>
-        <div class="candle">
-            <div class="flame"></div>
-        </div>
-    </div>
-
-
-
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.png"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="manifest" href="/manifest.json"/><title>Snehal Ray Portfolio</title><meta name="description" content="Self Developed personal website build with React.js"><script defer="defer" src="/static/js/main.b5458a46.js"></script><link href="/static/css/main.de435a56.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
